# Trabalho_Big_Data_Seromo

./: DadosLoja.xlsx  main.py  pyproject.toml  replit.nix  requirements.txt
